--- a/Ejercicio Fonts/css/Styles.css
+++ b/Ejercicio Fonts/css/Styles.css
@@ -1,5 +1,3 @@
-<style>
-
 .header{
 
 padding: 90px 100px 60px;
@@ -10,13 +8,12 @@ nav a{
 	text-decoration: none;
 	margin-right: 90px;
 	color: #c8cfc7;
-	font-family:'NixieOne';
 	display: inline;
 
 }
 
+
 .buscador{
-	font-family:'NixieOne';
 	display: inline;
 	color: #c8cfc7;
 	width: 300px;
@@ -24,7 +21,7 @@ nav a{
 }
 h1{
 	color: #1b3148;
-	font-family:'Shine Personal Use';
+	font-family: 'lobster';
 	font-size:50px;
 	text-align: center;
 }
@@ -37,20 +34,23 @@ body {
     margin: 0em;
     font color: #cdd2cb;
 }
+
 .container{
 	margin: 0em;
 
 
 }
-h2{
-	font-family:'Znikomit';
+
+#container h2{
+    font-family: 'montserrat';
 	text-align: center;
 }
 
 p{
-	font-family: 'NixieOne';
+	font-family: 'Roboto';
 	font-size:15px;
 	text-align: center;
+	color:#585656;
 }
 footer{
 	clear: both;
@@ -66,7 +66,16 @@ footer{
 }
 
 .menu{
-	float: left
+	float: left;
+	font-family:'montserrat';
 }
+
+span {
+	color:#1b3148;
+	font-size: 20px ;
+}
+
+
+
 
 
